3box profile edit working

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,9 @@ $lightFont:#54545e;
 $lighterFont:#7d7d7d;
 $lightestFont:#c1c1c1;
 
+$lighterDarkBG:rgb(79, 79, 83);
+$darkBG:#27272C;
+
 $windowBorderRadius: 14px;
 
 $threeBoxBlack: #181F21;
