--- a/src/styles/Edit.scss
+++ b/src/styles/Edit.scss
@@ -86,8 +86,7 @@
 }
 
 .edit_profile_canvas {
-  background-color: #27272C;
-  // background-color: $threeBoxBlueShade;
+  background-color: $darkBG;
   width: 100%;
   height: 160px;
   display: flex;
@@ -131,6 +130,7 @@
   width: fit-content;
   font-size: 12px;
   margin: 0;
+  min-height: 15px;
 }
 
 .edit_userPicture {
@@ -152,7 +152,7 @@
   -moz-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
-  background-color: $defaultProfPic;
+  background-color: $lighterDarkBG;
 }
 
 .coverPic {
@@ -174,13 +174,33 @@
 
 
 .addImage {
+  right: 5px;
+  bottom: 0;
   position: absolute;
   width: 36px;
   height: 36px;
-  right: 5px;
   opacity: 1;
   z-index: 2;
-  bottom: 0;
+  background: $darkBG;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+
+  font-size: 1em;
+  line-height: 1em;
+  color: $lightFont;
+  padding: .5em;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  border: none !important;
+  cursor: pointer;
+  transform: rotateY(0deg) rotate(45deg);
+
+  &:hover {
+    color: white;
+    background-color: $lightFont;
+  }
 }
 
 .addCoverPhoto {
@@ -474,7 +494,7 @@
   opacity: 1;
   z-index: 2;
   bottom: 0;
-  background: #E3E3E3;
+  background: $darkBG;
   color: $threeBoxRed;
   align-items: center;
   justify-content: center;
