general profile fully styled & working

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -48,7 +48,7 @@ $yellow: #FEFE69;
 $backgroundGrey: rgb(248, 248, 248);
 $backgroundGreyDark: #dfdfdfa6;
 
-$backgroundHue: rgb(245, 246, 248);
+$backgroundHue: #f9f9f9;
 
 $threeBoxRed: rgb(202, 50, 50);
 $threeBoxRedHover: rgb(155, 36, 36);
