--- a/src/styles/Edit.scss
+++ b/src/styles/Edit.scss
@@ -66,11 +66,12 @@
   align-items: center;
 }
 
-.edit_profile {
+.edit_profile_section {
   width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .edit_myProfile {
@@ -85,6 +86,39 @@
   }
 }
 
+.edit_profile_switch {
+  padding: 6px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: $backgroundHue;
+  height: fit-content;
+  border-radius: 25px;
+  cursor: pointer;
+  margin-right: 40px;
+  margin-top: 1.4em;
+  border: 1px solid $borderColor;
+
+  &:hover {
+    background-color: $borderColor;
+  }
+}
+
+.edit_profile_switch_pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: $lighterDarkBG;
+  margin-right: 8px;
+}
+
+.edit_profile_switch_text {
+  font-size: 13px;
+  color: $lighterFont;
+  margin: 0 8px 0 0;
+}
+
 .edit_profile_canvas {
   background-color: $darkBG;
   width: 100%;
@@ -95,6 +129,44 @@
   overflow: hidden;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
+  cursor: pointer;
+  position: relative;
+}
+
+.coverWrapper {
+  width: 100%;
+  height: 160px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  position: relative;
+}
+
+.coverWrapper:hover .edit_profile_canvas_overlay {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.edit_profile_canvas_overlay {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.397);
+  width: 100%;
+  height: 160px;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  transition: all .5s ease;
+  z-index: 1;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  cursor: pointer;
+
+  p {
+    font-weight: 400;
+    font-size: .8em;
+    color: white;
+  }
 }
 
 .edit_private {
@@ -105,7 +177,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0 40px 44px 40px;
-  border-bottom: 1px solid #f1f1f1;
+  // border-bottom: 1px solid #f1f1f1;
 }
 
 .edit_profile_info--verified {
@@ -158,49 +230,14 @@
 .coverPic {
   display: block;
   object-fit: cover;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  -o-transition: all .5s ease;
   transition: all .5s ease;
   width: 100%;
-  height: 174px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  height: 160px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   z-index: 0;
   position: absolute;
-  background-color: white;
-}
-
-
-
-.addImage {
-  right: 5px;
-  bottom: 0;
-  position: absolute;
-  width: 36px;
-  height: 36px;
-  opacity: 1;
-  z-index: 2;
-  background: $darkBG;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-
-  font-size: 1em;
-  line-height: 1em;
-  color: $lightFont;
-  padding: .5em;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  border: none !important;
-  cursor: pointer;
-  transform: rotateY(0deg) rotate(45deg);
-
-  &:hover {
-    color: white;
-    background-color: $lightFont;
-  }
+  background-color: $darkBG;
 }
 
 .addCoverPhoto {
@@ -211,6 +248,12 @@
   opacity: 1;
   z-index: 2;
   bottom: 0;
+}
+
+.profPic_div {
+  border-radius: 100%;
+  width: 150px;
+  height: 150px;
 }
 
 .profPic_div:hover .profPic_div_overlay {
@@ -229,9 +272,6 @@
   top: 0;
   left: 0;
   object-fit: cover;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  -o-transition: all .5s ease;
   transition: all .5s ease;
   z-index: 1;
 
@@ -243,7 +283,6 @@
 }
 
 .edit_info {
-  // overflow: hidden;
   display: inline-block;
   justify-content: center;
   align-content: center;
@@ -266,6 +305,84 @@
   justify-content: flex-start;
   align-items: flex-start;
   position: relative;
+}
+
+.edit_profile_verifiedFields {
+  margin-top: 12px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  height: 20px;
+}
+
+.edit_profile_verifiedFields_fields {
+  opacity: .6;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-right: 15px;
+
+  p {
+    font-size: 13px;
+  }
+}
+
+.infoIcon {
+  .edit_profile_verifiedFields_icons {
+    opacity: .6;
+  }
+}
+
+.edit_profile_verifiedFields_icons {
+  height: 15px;
+  width: auto;
+  margin: 2px 6px 0 0;
+}
+
+.edit_profile_verifiedFields_icons.email {
+  height: 12px;
+}
+
+.edit_profile_verifiedFields_info {
+  position: relative;
+}
+
+.edit_profile_verifiedFields_hover {
+  width: 120px;
+  height: fit-content;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 12px;
+  background-color: #474747;
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  left: 2px;
+  border-radius: 15px;
+  border-bottom-left-radius: 2px;
+}
+
+.infoIcon:hover {
+  .edit_profile_verifiedFields_hover {
+    display: flex;
+  }
+}
+
+.edit_profile_verifiedFields_info_text {
+  color: white;
+  margin: 0;
+  font-size: 13px;
+  // display: flex;
+  // justify-content: flex-start;
+  // align-items: center;
+}
+
+.edit_profile_verifiedFields_info_text_link {
+  color: #8ec5ff;
+  margin-left: 4px;
 }
 
 .nameAndEmoji {
@@ -429,6 +546,9 @@
 .edit_profile_value_emojiMenu {
   z-index: 5;
   position: absolute;
+  right: 0;
+  top: -90px;
+  box-shadow: 0 7px 14px 0 rgba(59, 65, 94, .1), 0 3px 6px 0 rgba(0, 0, 0, .07);
 }
 
 .edit_profile_value--privateContainer {
@@ -506,21 +626,14 @@
   height: 36px;
   opacity: 1;
   z-index: 2;
-  background: #E3E3E3;
   color: #E78888;
   border-radius: 50%;
+  background: $darkBG;
 
   &:hover {
     background-color: #474747;
     border: solid 1px transparent;
-    transition: background-color .8s ease;
   }
-
-  background: rgba(0, 0, 0, 0.404);
-  -webkit-transition: background-color .4s ease;
-  -o-transition: background-color .4s ease;
-  transition: background-color .4s ease;
-  margin-right: 14px;
 }
 
 .edit_formControls {
@@ -528,12 +641,31 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
 
-  .edit_formControls_content {
-    padding: 1.4em 3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.edit_formControls_content {
+  padding: 1.4em 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.edit_formControls_content_save {
+  width: 100px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $darkBG;
+  border-radius: 6px;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $lighterDarkBG;
   }
 }
 
@@ -585,9 +717,10 @@
 .edit_profile_editCanvas_wrapper {
   display: flex;
   align-items: center;
-  margin-right: 3em;
-  margin-bottom: 1.4em;
-  z-index: 1;
+  right: 40px;
+  bottom: 1.4em;
+  position: absolute;
+  z-index: 2;
 }
 
 .edit_profile_editCanvas_button {
@@ -613,8 +746,9 @@
 
 .edit_profile_picAndAddress {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-bottom: 30px;
+  align-items: flex-start;
 }
 
 .edit_breadCrumb {
@@ -901,7 +1035,7 @@
 
     }
 
-    .edit_profile {
+    .edit_profile_section {
       width: 100%;
       height: fit-content;
       display: flex;
