--- a/src/styles/Edit.scss
+++ b/src/styles/Edit.scss
@@ -2,7 +2,7 @@
 
 .edit {
   width: 580px;
-  // min-width: 740px;
+  display: none;
 
   h3 {
     font-size: 18px;
@@ -32,6 +32,10 @@
   button {
     display: inline-block;
   }
+}
+
+.edit.show {
+  display: inline;
 }
 
 .noMargin {
@@ -381,6 +385,7 @@
   left: 2px;
   border-radius: 15px;
   border-bottom-left-radius: 2px;
+  z-index: 3;
 }
 
 .infoIcon:hover {
@@ -723,20 +728,29 @@
 }
 
 .removeButton {
-  font-size: 1em;
-  line-height: 1em;
-  color: $lightFont;
-  padding: .5em;
-  font-weight: 700;
   display: flex;
   align-items: center;
   border: none !important;
   cursor: pointer;
 
   &:hover {
-    color: white;
+    p {
+      color: white;
+    }
+
     background-color: $lightFont;
   }
+
+  p {
+    font-size: 18px;
+    color: $lightestFont;
+    font-weight: 700;
+    margin: 0;
+  }
+}
+
+.undoArrow {
+  padding-top: 5px;
 }
 
 .removeGithub {
@@ -786,6 +800,7 @@
   margin-bottom: 30px;
   align-items: flex-start;
   width: 100%;
+  z-index: 1;
 }
 
 .edit_breadCrumb {
