add redirectFn, update all docs, add save feedback ui

--- a/src/styles/Edit.scss
+++ b/src/styles/Edit.scss
@@ -927,7 +927,7 @@
 .edit_formControls_address_copy {
   opacity: .6;
   width: 14px;
-  margin-left: 12px;
+  margin: 0 12px;
 }
 
 .options_menu {
