style example and loading animation

--- a/examples/index.scss
+++ b/examples/index.scss
@@ -1,5 +1,5 @@
 .App {
-  background-color: #3d594f;
+  background-color: #30bb9b;
   width: 100vw;
   height: 100%;
   min-height: 100vh;
@@ -13,7 +13,7 @@
   width: 94%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
   margin: 60px 0;
 }
@@ -31,6 +31,35 @@
   margin: 0 0 60px 0;
 }
 
+.Loading_modal_container {
+  min-width: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.Loading_modal {
+  background-color: white;
+  border-radius: 20px;
+  height: 500px;
+  width: 400px;
+  padding: 50px 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Loading_modal_mollie {
+  width: 100px;
+  height: auto;
+}
+
+.Loading_modal_load {
+  width: 40px;
+}
+
 @media only screen and (max-width: 768px) {
   .userscontainer {
     width: 100%;
@@ -38,6 +67,13 @@
 
   .example_page {
     width: 100%;
+    align-items: center;
     flex-direction: column;
+  }
+
+  .Loading_modal {
+    height: 500px;
+    width: calc(100vw - 30px);
+    margin: 15px;
   }
 }
